--- a/site/guide/model-workflows/setting-up-model-workflows.qmd
+++ b/site/guide/model-workflows/setting-up-model-workflows.qmd
@@ -187,6 +187,23 @@ To configure a wait step, select when you would like to [resume workflow]{.small
 | At Specified Date on Model Field | [model field]{.smallcaps}[^15] | Wait until a specific timestamp as defined by a valid `Date` or `Date Time` type model inventory field on a per model basis. If the selected field is empty[^16] or the milestone date inputted is in the past, the next workflow step will display immediately. |
 : **Wait** step configuration {.hover tbl-colwidths="[30,15,45]"}
 
+### Conditional requirements
+
+Conditional requirements can be configured for the following step types:[^6]
+
+| Step type | Conditional options |
+|---:|---|
+| Status Change | Under **[when these conditions are met]{.smallcaps}**, you are able to set both `AND` and `OR` conditions. |
+| User Action | Under **[display action button when]{.smallcaps}**, you are able to set both `AND` and `OR` conditions.  |
+| Approval | Under **[threshold]{.smallcaps}**, you are able to set the minimum percentage of approvers required for the resource to be approved. |
+| Condition Branch | Under each branch's **[conditions]{.smallcaps}**, you're able to designate the `AND` and `OR` conditions that apply to that path. |
+: Step type conditional options {.hover tbl-colwidths="[20,80]"}
+
+For Status Change, User Action, and Condition Branch conditions, you're able to add a single independent **Rule** or a linked condition **Group**. These rules and groups can be nested if desired:
+
+- Click **{{< fa plus >}} Rule** to add an independent rule.
+- Click **{{< fa plus >}} Group** to add a linked group of rules that all must be true to qualify.
+
 ### Workflow states*
 
 ## What's next
