--- a/site/guide/model-workflows/configure-custom-workflows.qmd
+++ b/site/guide/model-workflows/configure-custom-workflows.qmd
@@ -39,16 +39,16 @@ To set up a new custom workflow, you'll need to complete these three steps in se
 {{< include _link-workflow-together.qmd >}}
 
 ##### Link approval steps*
-Approval steps need to be subsequently linked to both a [Rejected]{.bubble .red .red-bg} and an [Approved]{.bubble .green .green-bg} Status Change step:
+Approval steps need to be subsequently linked to both a [Rejected]{.bubble .red .red-bg} and an [Approved]{.bubble .green .green-bg} Model Stage Change step:
 
 1. First, configure an **Approval** step.[^3]
 
-2. Then, drag two **Status Change** steps onto the canvas:[^4]
+2. Then, drag two **Model Stage Change** steps onto the canvas:[^4]
 
     - Assign a `Rejected` status to one in the **Set Document Status** field.
     - Assign an `Approved` status to the other in the **Set Document Status** field.
 
-3. Connect the **Approval** step to the [Rejected]{.bubble .red .red-bg} and [Approved]{.bubble .green .green-bg} **Status Change** steps with the red and green **{{< fa circle >}}** respectively by dragging from the colored **{{< fa circle >}}** to the top **{{< fa circle >}}** of the subsequent step.
+3. Connect the **Approval** step to the [Rejected]{.bubble .red .red-bg} and [Approved]{.bubble .green .green-bg} **Model Stage Change** steps with the red and green **{{< fa circle >}}** respectively by dragging from the colored **{{< fa circle >}}** to the top **{{< fa circle >}}** of the subsequent step.
 
 ::: {.column-margin}
 ![Linked REJECTED and APPROVED Status Change steps](approval-group-setup.png){fig-alt="A screenshot showing linked REJECTED and APPROVED Status Change steps" .screenshot}
@@ -107,7 +107,7 @@ You can edit a workflow in two ways:
 
 [^3]: [Setting up model workflows](/guide/model-workflows/setting-up-model-workflows.qmd#approval)
 
-[^4]: [Setting up model workflows](/guide/model-workflows/setting-up-model-workflows.qmd#status-change)
+[^4]: [Setting up model workflows](/guide/model-workflows/setting-up-model-workflows.qmd#stage-change)
 
 [^5]: [Working with the model inventory](/guide/model-inventory/working-with-model-inventory.qmd#search-filter-and-sort-models)
 
