--- a/site/guide/model-workflows/working-with-model-workflows.qmd
+++ b/site/guide/model-workflows/working-with-model-workflows.qmd
@@ -15,7 +15,7 @@ listing:
     - transition-model-workflows.qmd
 ---
 
-Use workflows to transition your models into their appropriate next stages throughout your model lifecycles.
+Once customized, use workflows to transition your models into their appropriate next stages throughout your model lifecycles.
 
 :::{#workflows}
 :::
