--- a/site/guide/model-workflows/setting-up-model-workflows.qmd
+++ b/site/guide/model-workflows/setting-up-model-workflows.qmd
@@ -36,47 +36,58 @@ A workflow is comprised of an interplay of these elements:
 
 :::: {.flex .flex-wrap .justify-around}
 
-::: {.w-30-ns .pl3}
-[{{< fa cube >}} model stage change&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;](#stage-change){.button-small}
-<br>
-[{{< fa wifi >}} workflow state change](#state-change){.button-small}
-<br>
-[{{< fa arrow-pointer >}} user action v2&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;](#user-action){.button-small}
-<br>
-[{{< fa users >}} approval&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;](#approval){.button-small}
+::: {.w-25-ns .pl1 .mt2}
+[{{< fa cube >}} &hairsp; model stage change](#stage-change){.button .button-fill}
+
+[{{< fa wifi >}} &hairsp; workflow state change](#state-change){.button .button-fill}
 
 :::
 
-::: {.w-70-ns}
-[{{< fa maximize >}} Condition Branch](#condition-branch){.button-small}
-<br>
-[{{< fa clock >}} wait&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;](#wait){.button-small}
-<br>
-[{{< fa arrow-right-arrow-left >}} run workflow&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;](#run-workflow){.button-small}
-<br>
-[{{< fa circle-stop >}} end&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;](#end){.button-small}
+::: {.w-25-ns .pl2 .mt2}
+[{{< fa arrow-pointer >}} &hairsp; user action v2](#user-action){.button .button-fill}
+
+[{{< fa users >}} &hairsp; approval](#approval){.button .button-fill}
+
+:::
+
+::: {.w-25-ns .pl2 .mt2}
+[{{< fa maximize >}} &hairsp; condition branch](#condition-branch){.button .button-fill}
+
+[{{< fa clock >}} &hairsp; wait](#wait){.button .button-fill}
+
+:::
+
+::: {.w-25-ns .pl2 .mt2}
+[{{< fa arrow-right-arrow-left >}} &hairsp; run workflow](#run-workflow){.button .button-fill}
+
+[{{< fa circle-stop >}} &hairsp; end](#end){.button .button-fill}
 
 :::
 
 ::::
 
-
-#### {{< fa cube >}} Model Stage Change*
+#### {{< fa cube >}} Model Stage Change
 <span id="stage-change"></span>
 
 - Transitions a model into another stage.
-- Requires available model stages associated with the workflow.[^3]
+- Requires available model stages associated with the workflow.[^4]
+
+| Field | Description |
+|---:|---|
+| [when these conditions are met]{.smallcaps} (optional) | Add conditional requirements to qualify for this step.[^5]  |
+| [set model stage to]{.smallcaps} | Select the model stage to transition to. |
+: **Status Change** step configuration {.hover tbl-colwidths="[40,60]"}
+
+#### {{< fa wifi >}} Workflow State Change*
+<span id="state-change"></span>
+
+Transitions the workflow into another state.[^6]
 
 | Field | Description |
 |---:|---|
 | [when these conditions are met]{.smallcaps} (optional) | Add conditional requirements to qualify for this step.[^4]  |
-| [set status to]{.smallcaps} | Select the status to transition to. |
+| [set model stage to]{.smallcaps} | Select the model stage to transition to. |
 : **Status Change** step configuration {.hover tbl-colwidths="[40,60]"}
-
-#### {{< fa wifi >}} Workflow State Change
-<span id="state-change"></span>
-
-WIP
 
 #### {{< fa arrow-pointer >}} User Action v2*
 <span id="user-action"></span>
@@ -263,6 +274,11 @@ For Status Change, User Action, and Condition Branch conditions, you're able to 
 
 ### Workflow states*
 
+Workflow states are stauses unique to a specific workflow. Set up workflow states by either:
+
+- Adding them while configuring a **{{< fa wifi >}} Workflow State Change** step,
+- Or 
+
 ## What's next
 
 - [Working with model workflows](working-with-model-workflows.qmd)
@@ -275,7 +291,13 @@ For Status Change, User Action, and Condition Branch conditions, you're able to 
 
 [^3]: [Conditional requirements](#conditional-requirements)
 
-<!-- [^3]: [Manage model stages](manage-model-stages.qmd)
+[^4]: [Manage model stages](manage-model-stages.qmd)
+
+[^5]: [Conditional requirements](#conditional-requirements)
+
+[^6]: [Workflow states](#workflow-states)
+
+<!-- 
 
 [^4]: [Add conditional requirements](configure-custom-workflows.qmd#add-conditional-requirements)
 
