--- a/site/guide/model-workflows/configure-custom-workflows.qmd
+++ b/site/guide/model-workflows/configure-custom-workflows.qmd
@@ -39,16 +39,16 @@ To set up a new custom workflow, you'll need to complete these three steps in se
 {{< include _link-workflow-together.qmd >}}
 
 ##### Link approval steps*
-Approval steps need to be subsequently linked to both a [Rejected]{.bubble .red .red-bg} and an [Approved]{.bubble .green .green-bg} Model Stage Change step:
+{{< fa users >}} Approval steps need to be subsequently linked to both a [Rejected]{.bubble .red .red-bg} and an [Approved]{.bubble .green .green-bg} {{< fa cube >}} Model Stage Change step:[^3]
 
-1. First, configure an **Approval** step.[^3]
+1. First, configure an **{{< fa users >}} Approval** step.
 
-2. Then, drag two **Model Stage Change** steps onto the canvas:[^4]
+2. Then, drag two **{{< fa cube >}} Model Stage Change** steps onto the canvas:
 
     - Assign a `Rejected` status to one in the **Set Document Status** field.
     - Assign an `Approved` status to the other in the **Set Document Status** field.
 
-3. Connect the **Approval** step to the [Rejected]{.bubble .red .red-bg} and [Approved]{.bubble .green .green-bg} **Model Stage Change** steps with the red and green **{{< fa circle >}}** respectively by dragging from the colored **{{< fa circle >}}** to the top **{{< fa circle >}}** of the subsequent step.
+3. Connect the **{{< fa users >}} Approval** step to the [Rejected]{.bubble .red .red-bg} and [Approved]{.bubble .green .green-bg} **{{< fa cube >}} Model Stage Change** steps with the red and green **{{< fa circle >}}** respectively by dragging from the colored **{{< fa circle >}}** to the top **{{< fa circle >}}** of the subsequent step.
 
 ::: {.column-margin}
 ![Linked REJECTED and APPROVED Status Change steps](approval-group-setup.png){fig-alt="A screenshot showing linked REJECTED and APPROVED Status Change steps" .screenshot}
@@ -68,7 +68,7 @@ You can edit a workflow in two ways:
 2. Via a workflow applied to a model:
 
     a. In the left sidebar, click **{{< fa cubes >}} Inventory**.
-    b. Select a model or find your model by applying a filter or searching for it.[^5]
+    b. Select a model or find your model by applying a filter or searching for it.[^4]
     c. On the landing page of your model, locate the [active workflows]{.smallcaps} section.
     d. Click on the name of the workflow you'd like to abort to open that specific workflow's details.
     e. On the workflow's detail modal, click on the **{{< fa ellipsis-vertical >}}** in the top-right hand corner and select **{{< fa pencil >}} Edit Workflow**.
@@ -105,11 +105,9 @@ You can edit a workflow in two ways:
 
 [^2]: [Manage permissions](/guide/configuration/manage-permissions.qmd)
 
-[^3]: [Setting up model workflows](/guide/model-workflows/setting-up-model-workflows.qmd#approval)
+[^3]: [Setting up model workflows](/guide/model-workflows/setting-up-model-workflows.qmd#workflow-step-types)
 
-[^4]: [Setting up model workflows](/guide/model-workflows/setting-up-model-workflows.qmd#stage-change)
-
-[^5]: [Working with the model inventory](/guide/model-inventory/working-with-model-inventory.qmd#search-filter-and-sort-models)
+[^4]: [Working with the model inventory](/guide/model-inventory/working-with-model-inventory.qmd#search-filter-and-sort-models)
 
 <!-- [^3]: [Status Change](#status-change) steps
 
