--- a/site/guide/model-workflows/setting-up-model-workflows.qmd
+++ b/site/guide/model-workflows/setting-up-model-workflows.qmd
@@ -34,40 +34,11 @@ A workflow is comprised of an interplay of these elements:
 
 ### Workflow step types
 
-:::: {.flex .flex-wrap .justify-around}
+::: {.panel-tabset}
 
-::: {.w-25-ns .pl1 .mt2}
-[{{< fa cube >}} &hairsp; model stage change](#stage-change){.button .button-fill}
-
-[{{< fa wifi >}} &hairsp; workflow state change](#state-change){.button .button-fill}
-
-:::
-
-::: {.w-25-ns .pl2 .mt2}
-[{{< fa arrow-pointer >}} &hairsp; user action v2](#user-action){.button .button-fill}
-
-[{{< fa users >}} &hairsp; approval](#approval){.button .button-fill}
-
-:::
-
-::: {.w-25-ns .pl2 .mt2}
-[{{< fa maximize >}} &hairsp; condition branch](#condition-branch){.button .button-fill}
-
-[{{< fa clock >}} &hairsp; wait](#wait){.button .button-fill}
-
-:::
-
-::: {.w-25-ns .pl2 .mt2}
-[{{< fa arrow-right-arrow-left >}} &hairsp; run workflow](#run-workflow){.button .button-fill}
-
-[{{< fa circle-stop >}} &hairsp; end](#end){.button .button-fill}
-
-:::
-
-::::
+### Transitions
 
 #### {{< fa cube >}} Model Stage Change
-<span id="stage-change"></span>
 
 - Transitions a model into another stage.
 - Requires available model stages associated with the workflow.[^4]
@@ -79,7 +50,6 @@ A workflow is comprised of an interplay of these elements:
 : **Status Change** step configuration {.hover tbl-colwidths="[40,60]"}
 
 #### {{< fa wifi >}} Workflow State Change*
-<span id="state-change"></span>
 
 Transitions the workflow into another state.[^6]
 
@@ -89,8 +59,9 @@ Transitions the workflow into another state.[^6]
 | [set model stage to]{.smallcaps} | Select the model stage to transition to. |
 : **Status Change** step configuration {.hover tbl-colwidths="[40,60]"}
 
+### Actions
+
 #### {{< fa arrow-pointer >}} User Action v2*
-<span id="user-action"></span>
 
 - Creates a button that performs an action on behalf of the user. 
 - Requires available model lifecycle statuses associated with the workflow.[^5]
@@ -124,7 +95,6 @@ Example
 ::::
 
 ::: {.callout title="All model inventory field types can be included as request fields on a User Action step. "}
-<span id="attachments"></span> 
 
 :::: {.flex .flex-wrap .justify-around}
 
@@ -147,7 +117,6 @@ Example
 :::
 
 #### {{< fa users >}} Approval*
-<span id="approval"></span>
 
 - When your resource reaches the approval step, roles or users in the selected **Approval Group** will receive your configured message. 
 - Requires either a **User Role**[^8] or **User Type** inventory field[^9] to select from, and must be connected to both an approval and rejection Status Change step.[^10]
@@ -180,8 +149,9 @@ Example
 
 ::::
 
+### Conditional
+
 #### {{< fa maximize >}} Condition Branch*
-<span id="condition-branch"></span>
 
 - Allows diverging paths based on conditional requirements.
 - A `default` branch will be automatically included as a catch-all `else` path to ensure that your conditional logic is complete.
@@ -227,7 +197,7 @@ For example, if you wanted your models where the field `GenAI Model` is set to `
 :::
 
 #### {{< fa clock >}} Wait*
-<span id="wait"></span>
+
 
 - Creates a time condition for displaying next available action.
 - Used to enforce a time delay or a calendar date milestone. 
@@ -245,15 +215,17 @@ To configure a wait step, select when you would like to [resume workflow]{.small
 | At Specified Date on Model Field | [model field]{.smallcaps}[^15] | Wait until a specific timestamp as defined by a valid `Date` or `Date Time` type model inventory field on a per model basis. If the selected field is empty[^16] or the milestone date inputted is in the past, the next workflow step will display immediately. |
 : **Wait** step configuration {.hover tbl-colwidths="[30,15,45]"}
 
+### Start / Stop
+
 #### {{< fa arrow-right-arrow-left >}} Run Workflow*
-<span id="run-workflow"></span>
 
 WIP
 
 #### {{< fa circle-stop >}} End*
-<span id="end"></span>
 
 WIP
+
+:::
 
 ### Conditional requirements*
 
@@ -274,10 +246,30 @@ For Status Change, User Action, and Condition Branch conditions, you're able to 
 
 ### Workflow states*
 
-Workflow states are stauses unique to a specific workflow. Set up workflow states by either:
+Workflow states are statuses unique to a specific workflow, discrete from model stages.**
 
-- Adding them while configuring a **{{< fa wifi >}} Workflow State Change** step,
-- Or 
+#### Add workflow states
+
+Add workflow states by either while configuring a **{{< fa wifi >}} Workflow State Change** step,** or via the **{{< fa gear >}} Settings** page:
+
+1. In the left sidebar, click **{{< fa gear >}} Settings**.
+2. Under Workspace, select **Workflow States**.
+3. Click on the workflow you'd like to modify workflow states for.
+4. Click **{{< fa gear >}} Add New Workflow State**.
+5. Enter in a **[name]{.smallcaps}** and a **[description]{.smallcaps}**, then select a **[color]{.smallcaps}** for your workflow state.
+6. Click **Save** to create the workflow state.
+
+#### Delete workflow states
+
+::: {.callout-important title="Workflow state deletion is permanent."}
+Deleting a workflow state may cause your existing workflows to malfunction.*CAN YOU EVEN DELETE A STATE THAT IS IN USE? Check
+:::
+
+1. In the left sidebar, click **{{< fa gear >}} Settings**.
+2. Under Workspace, select **Workflow States**.
+3. Click on the workflow you'd like to delete workflow states for.
+4. Hover over the workflow state until the **{{< fa trash-can >}}** appears, then click on it.
+5. After you confirm, the workflow state will be removed.
 
 ## What's next
 
