--- a/site/guide/model-workflows/setting-up-model-workflows.qmd
+++ b/site/guide/model-workflows/setting-up-model-workflows.qmd
@@ -4,13 +4,13 @@ date: last-modified
 listing:
   - id: model-workflows
     type: grid
-    grid-columns: 2
     max-description-length: 250
     sort: false
     fields: [title, description]
     contents:
     - manage-model-stages.qmd
     - configure-custom-workflows.qmd
+    - workflow-configuration-examples.qmd
 ---
 
 Configure workflows to match your organizational needs for overseeing model development, validation, implementation, ongoing monitoring, auditing, or other risk management activities.
