--- a/site/guide/model-workflows/_link-workflow-together.qmd
+++ b/site/guide/model-workflows/_link-workflow-together.qmd
@@ -43,3 +43,9 @@ To link subsequent steps together:
 1. When you are finished, click **Save Workflow** to apply your changes.
 
 ::::
+
+#### End the workflow
+
+When all your steps have been linked together, designate the end of your workflow by:
+
+WIP
