--- a/site/guide/model-workflows/configure-custom-workflows.qmd
+++ b/site/guide/model-workflows/configure-custom-workflows.qmd
@@ -50,10 +50,10 @@ To set up a new custom workflow, you'll need to complete these three steps in se
 
 3. Connect the **{{< fa users >}} Approval** step to the [Rejected]{.bubble .red .red-bg} and [Approved]{.bubble .green .green-bg} **{{< fa cube >}} Model Stage Change** steps with the red and green **{{< fa circle >}}** respectively by dragging from the colored **{{< fa circle >}}** to the top **{{< fa circle >}}** of the subsequent step.
 
-::: {.column-margin}
+<!-- ::: {.column-margin}
 ![Linked REJECTED and APPROVED Status Change steps](approval-group-setup.png){fig-alt="A screenshot showing linked REJECTED and APPROVED Status Change steps" .screenshot}
 
-:::
+::: -->
 
 ## Edit existing workflows
 
