--- a/site/guide/model-workflows/setting-up-model-workflows.qmd
+++ b/site/guide/model-workflows/setting-up-model-workflows.qmd
@@ -292,7 +292,10 @@ WIP
 
 ### Conditional requirements*
 
-Conditional requirements can be configured for the following step types:[^6]
+Conditional requirements can be configured for the following step types:**
+
+::: {.panel-tabset}
+#### {{< fa cube >}} Model Stage Change
 
 | Step type | Conditional options |
 |---:|---|
@@ -306,6 +309,14 @@ For Status Change, User Action, and Condition Branch conditions, you're able to 
 
 - Click **{{< fa plus >}} Rule** to add an independent rule.
 - Click **{{< fa plus >}} Group** to add a linked group of rules that all must be true to qualify.
+
+#### {{< fa arrow-pointer >}} User Action v2
+
+#### {{< fa users >}} Approval
+
+#### {{< fa maximize >}} Condition Branch
+
+:::
 
 ### Workflow states*
 
